--- a/SQL/readme
+++ b/SQL/readme
@@ -1,1 +1,1 @@
-This folder contains SQL snippets and scripts from various courses (usually Coursera) or from my own pracitice
+This folder contains SQL snippets and scripts from various courses (usually Coursera) or from my own practice
